support java 9/10